# CC_project

./: .gitignore  README.md
backend/: Dockerfile  config.py  db.py  environment.yml  main.py  models.py  pyproject.toml  requirements.txt  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 0012e2f3605a_add_refresh_tokens_table.py  2e63ac2a75bd_add_role_to_users.py  86e6950aa32c_add_file_metadata_table.py  c83db0866d27_create_users_table.py
backend/app/: dependencies.py  main.py
backend/app/api/v1/endpoints/: auth.py  files.py  users.py
backend/app/core/: config.py  security.py
backend/app/crud/: __init__.py  file.py  refresh_token.py  user.py
backend/app/db/: session.py
backend/app/models/: __init__.py  file.py  refresh_token.py  user.py
backend/app/schemas/: __init__.py  admin.py  file.py  token.py  user.py
backend/app/services/: gcs_service.py  s3_service.py  storage_interface.py
backend/routers/: auth.py  files.py
backend/utils/: file_ops.py  s3_ops.py  security.py
frontend/: components.d.ts  package-lock.json  package.json
frontend/src/: App.vue  main.js
frontend/src/components/: ConfirmDialog.vue  CreateUserDialog.vue  EditUserDialog.vue  FileList.vue  RenameDialog.vue  ResetPasswordDialog.vue  UploadDialog.vue
frontend/src/plugins/: axios.js  index.js
frontend/src/router/: index.js
frontend/src/stores/: auth.js
frontend/src/views/: Dashboard.vue  Login.vue  Register.vue
frontend/src/views/admin/: UserManagement.vue
